--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -252,3 +252,8 @@ nice命令更改优先级
 
 # 第三章存储器抽象
 
+避免使用绝对的内存地址导致内存装载的时候跳到错误的位置  
+使用静态重定位技术
+
+>它的工作方式如下，当一个程序被装载到地址16 384时，常数16 384被加到每一个程序地址上。虽然这个机制在不出错误的情况下是可行的，但这不是一种通用的解决办法，同时会减慢装载速度
+
