--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -250,10 +250,82 @@ nice命令更改优先级
 
 *从A1切换到A2比从A1切换到B1开销更小*
 
-# 第三章存储器抽象
+# 第三章存储
 
 避免使用绝对的内存地址导致内存装载的时候跳到错误的位置  
 使用静态重定位技术
 
 >它的工作方式如下，当一个程序被装载到地址16 384时，常数16 384被加到每一个程序地址上。虽然这个机制在不出错误的情况下是可行的，但这不是一种通用的解决办法，同时会减慢装载速度
+
+处理内存超载使用 **交换系统** : 把被挂起的进程的内存内容放在磁盘上
+
+![Alt text](image-13.png)
+
+这种方案会需要特别地去解决进程内存自动增长的问题  
+
+>若该进程与一个空闲区相邻，那么可把该空闲区分配给该进程让它在这个空闲区增大。另一方面，若进程相邻的是另一个进程，那么要么把需要增长的进程移到内存中一个足够大的区城中去，要么把一个或多个进程交换出去，以便生成一个足够大的空闲区。若一个进程在内存中不能增长，而且磁盘上的交换区也已满了，那么这个进程只有挂起直到一些空间空闲(或者可以结束该进程)。
+
+![Alt text](image-14.png)
+
+因此os可以为增长预留空间  
+但在交换时把预留的空间也全部交换出去是一种浪费
+
+**记录空闲内存**
+
+方法
+- 位图法:按bit的倍数分割内存单元 用位图记录空闲状态(bit map)
+- 使用链表记录 (空闲 or 占用) \| (起始位置) \| (长度) \| (下一个)
+- 快速适配
+
+![Alt text](image-15.png)
+
+**虚拟内存**
+
+覆盖
+
+![Alt text](image-16.png)
+
+**内存管理单元 MMU**
+
+![Alt text](image-17.png)
+
+页面和页框的大小通常是一致的  
+此时 MMU 会把所有 0\~4095 的有效请求映射到 8192\~12287
+
+当程序需要访问一个不在页框中的页面  
+MMU缺页中断  
+CPU陷入陷入操作系统  
+选择一个页框放弃掉 并载入需要的新的页面  
+
+以二的幂作为页框长度有好处:
+
+![Alt text](image-18.png)
+
+左侧的值被用作虚拟页面的索引  
+右侧的值被直接复制到物理地址的映射
+
+>例如，对于16位地址和4KB 的页面大小，高4位可以指定16个虚拟页面中的一页，而低12位接着确定了所选页面中的字节偏移量 (0~4095)。但是使用3或者5或者其他位数拆分虚拟地址也是可行的。不同的划分对应不同的页面大小。
+
+![Alt text](image-19.png)
+
+说明
+- 在\/不在 位  
+如果不在(0)会引发缺页中断
+- 保护位 读 写 执行
+- 修改位 :  
+在重新分配页框时 如果一个数据已经被修改,那就必须要写回磁盘  
+而如果只是读过了, 就只需要删除
+- 访问位 : 为操作系统选择哪个页面应当丢弃时作为参考
+- 禁用高速缓存位 : 保证能够从设备实时地读出内容而不是用缓存中的内容
+
+为了降低**寄存器操作**时候对内存的访问  
+(寄存器操作需要先查页表 而后才能知道具体修改哪个寄存器)
+
+TLB 转换检测缓冲区 减少反复读取内存的开销(是硬件解决方案) 
+
+TLB管理软件:  
+同样为了减少TBL失效发生的概率(类似于缺页中断)  
+发展出了TBL预测
+
+![Alt text](image-20.png)
 
