--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -329,3 +329,60 @@ TLB管理软件:
 
 ![Alt text](image-20.png)
 
+大内存页表  
+多级页表: 10位找页表1 10位在子页表2索引 12位是偏移量  
+倒排页表(?): 在64位系统中用的比较多
+
+页面置换问题  
+在发生缺页中断的时候需要把内存中的某个页面移出  
+1. 最近未使用置换NRU  
+在每一段滴答时随机清除页面的访问位  
+修改位不改动  
+发生置换时, 优先干掉访问位为 0 的页面
+2. 先进先出FIFO  
+3. 第二次机会  
+最老的页面的访问位是否是 0?
+如果是 1  
+那么就把访问位置为 0   
+然后视为新放入的页面 (后进入的页面)
+4. 时钟页面  (是第二次机会的优雅版本)  
+![Alt text](image-21.png)
+5. 最少使用页面LRU  
+记录使用次数代价高昂  
+使用硬件: 使用次数计数器(甚至无需考虑溢出问题)  
+![Alt text](image-22.png)
+6. 软件模拟的LRU \-最不常用页面(NFU)的改版  
+将访问位(0 or 1)放在计数器最左   
+将所有的计数器位 向右移动一位 (aging过程)
+就可以时刻移除最少访问的页面
+7. 工作集算法  
+进程当前正在使用的页面称作工作集  
+挂起一个进程并且将他的页面都移除内存后  
+原则上重新启动之会发出非常多的缺页中断  
+在进程工作前预先调入他的页面 (**预先调页**)  
+1  
+一个可行的算法是  
+![Alt text](image-23.png)   
+访问后设置访问位为 1  
+在一次滴答后检查访问位:
+- 若为1 则: 变成0 并且把上次访问时间更新
+- 若为0 则: 
+    - 如果上次访问时间过于久 则可以被删除
+    - 如果上次访问时间不够久, 就不删除
+- 如果扫描一圈发现全都在工作集中, 就优先删除 够久的 其次删除 不够久的
+8. 类似的, 工作集算法可以被升级成 **工作集时钟算法**  
+![
+](image-24.png)  
+如果没能在转一圈之后置换任何页面 和一般工作集法同理操作
+
+### 分页系统置换策略问题(公平性)
+
+全局算法和局部算法  
+一个只能用预先分配的页框  
+一个可以用任意内存中的页框
+
+#### 全局方法
+
+进程进程平等  
+按进程大小分配  
+**按*缺页中断率* 分配**  
