--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -381,8 +381,74 @@ TLB管理软件:
 一个只能用预先分配的页框  
 一个可以用任意内存中的页框
 
-#### 全局方法
+**全局方法**
 
 进程进程平等  
 按进程大小分配  
 **按*缺页中断率* 分配**  
+
+或者是在缺页中断率过高时将更多进程挂起
+
+页面大小  
+没有最优的页面大小  
+选择小页面的理由:
+- 最后的页面可能有一半都是无用的 (内部碎片 internal fragmentation)
+- 一个小程序可以需要更少的工作集
+
+选择大页面的理由  
+- 小页面需要太多的页表 (内存和磁盘的传输多是一次一页, 因此大部分时间都花在了*寻道* 和*旋转延迟* 上)
+- 小页面可能占据过多宝贵的TLB空间
+
+![Alt text](image-25.png)
+
+I空间和D空间:  
+一个内存放指令(有单独分页)  
+另一个放data(同样有单独分页)
+
+在UNIX 中 使用fork生成子进程后, 子进程会和父进程共享数据页面集合, 他们会有各自的页表, 但指向同一个页面集合  
+这个时候, copy on write
+
+### 动态链接库
+
+### 内存映射文件
+
+![Alt text](image-26.png)
+
+### 分页守护进程 (清除策略)
+
+空闲页框过少便提前干掉一些页面  
+保证空闲页框没必要在移作他用的时候再往磁盘中写回一次
+
+### 虚拟内存接口 (使程序员能够对内存映射进行控制)
+
+### 中断时在做什么
+
+![Alt text](image-27.png)
+![Alt text](image-28.png)
+
+p132 指令备份是什么??
+
+![Alt text](image-29.png)
+
+### 内存中的分段存储
+
+把相似数据类型的内容存储在同一个段  
+这样在浮动在扩张时, 内存可以立即腾出空间来
+
+除此之外  
+分段后  第n段的内容如果被重新编译  
+也不需要对其他的过程的起始偏移量进行任何修改
+
+分段也有助于进程之间共享过程和数据  
+一个例子是**共享库**
+
+同样 一个过程段可以只允许执行  
+一个浮点段可以只允许读  
+逻辑上对内存进行分段方便了管理  
+![Alt text](image-30.png)
+
+![Alt text](image-31.png)
+
+上面就是x86
+
+# 第四章文件系统
