--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -449,6 +449,21 @@ p132 指令备份是什么??
 
 ![Alt text](image-31.png)
 
+![Alt text](image-32.png)
+
 上面就是x86
 
 # 第四章文件系统
+
+![Alt text](image-33.png)
+![Alt text](image-34.png)
+
+>当用磁盘来存储文件时，我们可以不按顺序地读取文件中的字节或记录，或者按照关键字而不是位置来存取记录。这种能够以任何次序读取其中字节或记录的文件称作随机访问文件(random access file)许多应用程序需要这种类型的文件。
+
+随机访问文件 如数据库系统:  
+用户要能不在查询到他的机票信息之前访问所有的机票信息
+
+### 属性 元数据
+
+![Alt text](image-35.png)
+
