--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -467,3 +467,15 @@ p132 指令备份是什么??
 
 ![Alt text](image-35.png)
 
+![Alt text](image-36.png)
+
+绝对路径 相对路径和工作路径
+
+![Alt text](image-37.png)
+
+>每个进程都有自己的工作目录，这样在进程改变工作目录并退出后，其他进程不会受到影响，文件系统中也不会有改变的痕迹。对进程而言，切换工作目录是安全的，所以只要需要，就可以改变当前工作目录。
+
+>如果改变了库过程的工作目录，并且工作完毕之后没有修改回去，则其他程序有可能无法正常运行，因为它们关于当前目录的假设已经失效。
+
+![Alt text](image-38.png)
+
