--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -479,3 +479,90 @@ p132 指令备份是什么??
 
 ![Alt text](image-38.png)
 
+有一种link 是硬链接  
+unix中的link 和 win 的快捷方式是 符号连接
+
+![Alt text](image-39.png)
+
+MBR 主引导记录  
+用于引导计算机
+
+每个分区都从一个引导快开始  
+虽然可能此分区暂时还没有可以引导的操作系统  
+但为之后的可能性预留空间
+
+超级块包含分区的文件系统的所有参数  
+在计算机启动时, 会被加载
+
+空闲空间用位图或者指针列表的形式给出
+
+>(?)后面也许跟随的是一组i节点，这是一个数据结构数组，每个文件一个，i节点说明了文件的方方面面。
+
+![Alt text](image-43.png)
+
+>由于每个文件都必须有一个inode，因此有可能发生inode已经用光，但是硬盘还未存满的情况。这时，就无法在硬盘上创建新文件。   
+每个inode都有一个号码，操作系统用inode号码来识别不同的文件。   
+这里值得重复一遍，Unix/Linux系统内部不使用文件名，而使用inode号码来识别文件。对于系统来说，文件名只是inode号码便于识别的别称或者绰号。  
+表面上，用户通过文件名，打开文件。实际上，系统内部这个过程分成三步：首先，系统找到这个文件名对应的inode号码；其次，通过inode号码，获取inode信息；最后，根据inode信息，找到文件数据所在的block，读出数据。
+
+>一般情况下，文件名和inode号码是"一一对应"关系，每个inode号码对应一个文件名。但是，Unix/Linux系统允许，多个文件名指向同一个inode号码。  
+这意味着，可以用不同的文件名访问同样的内容；对文件内容进行修改，会影响到所有文件名；但是，删除一个文件名，不影响另一个文件名的访问。这种情况就被称为"硬链接"（hard link）。
+
+>除了硬链接以外，还有一种特殊情况。  
+文件A和文件B的inode号码虽然不一样，但是文件A的内容是文件B的路径。读取文件A时，系统会自动将访问者导向文件B。因此，无论打开哪一个文件，最终读取的都是文件B。这时，文件A就称为文件B的"软链接"（soft link）或者"符号链接（symbolic link）。  
+这意味着，文件A依赖于文件B而存在，如果删除了文件B，打开文件A就会报错："No such file or directory"。这是软链接与硬链接最大的不同：文件A指向文件B的文件名，而不是文件B的inode号码，文件B的inode"链接数"不会因此发生变化。
+
+![Alt text](image-44.png)
+
+### 记录文件 文件存储
+- 连续分配  
+需要在文件创建时申明文件的最大大小  
+产生很多不可用碎片
+- 链表分配  
+从第一个文件块指向最尾端文件块  
+随机访问成为灾难  
+指针占去了一些字节使得块的大小不是2的幂  
+这会导致一些降速
+- 文件分配表 FAT  
+把文件链表指针存在内存中  
+这样和链表分配的区别不大  
+并且由于指针存放在内存中, 所以随机访问的速度更快了  
+但由于必须要把所有的表都放在内存中, 占用空间较高
+- i节点  
+(?)没看懂!  
+![Alt text](image-40.png)
+
+### 如何实现可变长文件名?
+
+- 可变文件头部  
+这个文件头部和属性一样, 是被存在目录内的  
+可变文件长度导致内存会被分为更多更小的空隙  
+同时, 一个目录过长会导致读入的时候发生缺页中断
+- 目录自身长度固定, 文件名处指针指向一个文件名堆  
+空隙问题得到了一般的解决  
+但同样会发生缺页中断问题  
+![Alt text](image-41.png)
+
+查找文件名加速: 使用散列表
+
+### 共享文件问题
+
+为了使不同的目录下出现 **同一个文件**
+
+UNIX:  目录指向一个小型数据结构(小型数据结构即i节点)  
+或者使用link 创建符号链接
+
+i节点的问题是 : 共享的任何一方删除之 只会让引用计数器 \-1  
+因此不能共享删除操作
+
+符号链接需要额外的开销(?)  
+![Alt text](image-42.png)
+
+共享文件 : 一份文件被两次复制的问题
+
+### 日志结构文件系统
+
+>在大多数文件系统中，写操作往往都是零碎的。一个50us的磁盘写操作之前通常需要10ms的寻道时间和4ms的旋转延迟时间，可见零碎的磁盘写操作是极其没有效率的。根据这些参数，磁盘的效率降低到1%以下
+
+>为了看看这样小的零碎写操作从何而来，考虑在UNIX文件系统上创建一个新文件。为了写这个文件，必须写该文件目录的i节点、目录块、文件的i节点以及文件本身。而这些写操作都有可能被延迟那么如果在写操作完成之前发生死机，就可能在文件系统中造成严重的不一致性。正因为如此，i节点的写操作一般是立即完成的。
+
