--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -566,3 +566,23 @@ i节点的问题是 : 共享的任何一方删除之 只会让引用计数器 \-
 
 >为了看看这样小的零碎写操作从何而来，考虑在UNIX文件系统上创建一个新文件。为了写这个文件，必须写该文件目录的i节点、目录块、文件的i节点以及文件本身。而这些写操作都有可能被延迟那么如果在写操作完成之前发生死机，就可能在文件系统中造成严重的不一致性。正因为如此，i节点的写操作一般是立即完成的。
 
+删除文件三个步骤:
+- 在目录中删除文件
+- 释放i节点到空闲i节点池
+- 将所有磁盘块归还空闲磁盘块池
+
+>在Windows中，也需要类似的步骤。不存在系统崩溃时，这些步骤执行的顺序不会带来问题，但是当存在系统崩溃时，就会带来问题。假如在第一步完成后系统崩溃。i节点和文件块将不会被任何文件获得也不会被再分配，它们只存在于废物池中的某个地方，并因此减少了可利用的资源。如果崩墙发生在第一步后，那么只有磁盘块会丢失。
+>
+>如果操作顺序被更改，并且i节点最先被释放，这样在系统重启后，i节点可以被再分配，但是旧的目录入口将继续指向它，因此指向错误文件。如果磁盘块最先被释放，这样一个在i节点被清除前的系统崩溃将意味着一个有效的目录入口指向一个i节点，它所列出的磁盘块当前存在于空闲块存储池中并可能很快被再利用。这将导致两个或更多的文件分享同样的磁舟块。这样的结果都是不好的
+
+![Alt text](image-45.png)
+
+![Alt text](image-46.png)
+
+### 虚拟文件系统 VFS
+
+抽象出所有文件系统所共有的部分  
+让文件系统看起来像是同一个东西
+
+VFS保留了原语和操作其他文件系统原语的能力
+
