--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -586,3 +586,43 @@ i节点的问题是 : 共享的任何一方删除之 只会让引用计数器 \-
 
 VFS保留了原语和操作其他文件系统原语的能力
 
+![Alt text](image-47.png)
+
+>从调用者进程号和文件描述符开始，进而是v节点，读功能指针，然后是对实际文件系统的入口的数定位。
+
+### 块该多大?
+
+大块意味着一字节的文件都需要占用很大的空间  
+小的块意味着读出他们需要多次寻道与旋转延迟  
+
+![Alt text](image-48.png)
+
+![Alt text](image-49.png)
+
+因此, 尽量使在内存中的指针块保持半满状态:  
+这样既可以处理释放, 又可以处理分配
+
+### 磁盘配额
+
+![
+](image-50.png)
+
+### 备份
+
+增量转储: 记录Δ  
+恢复困难
+
+(?)快照?  
+![Alt text](image-51.png)
+
+物理转储:
+- 从磁盘第 0 块开始, 将全部磁盘块按序输出到磁带上
+- 需要知道坏块在哪 怎么被处理的
+    1. 操作系统处理 : 备份程序就必须知道坏块信息, 避免永无止境的磁盘错误
+    2. 磁盘硬件重映射 : 操作系统和备份程序都不需要做任何事情
+- win 有分页文件和休眠文件不应当备份
+- 简单且快速
+- 但无法跳过特定目录 , 也无法增量转储 , 不能恢复特定的文件
+
+逻辑转储
+- 逻辑转储遍历目录, 可以有选择性地只转储特定用户 or 特定时间后的文件
