--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -626,3 +626,104 @@ VFS保留了原语和操作其他文件系统原语的能力
 
 逻辑转储
 - 逻辑转储遍历目录, 可以有选择性地只转储特定用户 or 特定时间后的文件
+- 逻辑转储先转储目录 而后才是文件  
+这样可以确保在恢复的时候先为文件腾出位置
+
+但
+- 逻辑转储在恢复后可能需要重新建立空闲块列表
+- **UNIX文件可能会出现的情况**  
+    >还有一个问题就是:UNIX文件实际上包含了许多“空洞”。打开文件，写几个字节，然后找到文件中一个偏移了一定距离的地址，又写入更多的字节，这么做是合法的。但两者之间的这些块并不属于文件本身，从而也不应该在其上实施转储和恢复操作。核心文件通常在数据段和堆栈段之间有一个数百兆字节的空洞。如果处理不得当，每个被恢复的核心文件会以“0”填充这些区域，这可能导致该文件与虚拟地址空间一样大(例如，2\^32字节，更精糕可能会达到2\^64字节)。
+- 特殊文件 (如/dev) 和 命名管道 等都不应当转储
+
+### 一致性
+
+块的一致性
+- 检查方法  
+建立计数器  
+第一个计数器检查 **每个文件占用了哪个块** 并给有任何文件占用着的块打 1  
+第二个计数器检查 **空闲块列表(位图 or 指针)** 并给空闲块打 1  
+正常的块 : 在计数器 1 和计数器 2 中和为 1  
+- 计 1 和计 2 都为 0 **(块丢失)**   
+被丢失的块往往加入空闲表
+- 1 为 0 而 2 为 2  
+只是需要重写空闲表
+- 1 为 2 而 2 为 0  
+最为麻烦
+    - 如果直接删除会让 一个块同时处于空闲和占用状况
+    - 可以这样  
+    先分配一个空闲块  
+    然后把此块的内容复制到空闲块中  
+    然后把他插入到两个冲突文件中的其中一个文件中  
+    并且向用户报告这两个文件的问题
+
+目录的一致性    
+遍历所有的文件, 遇到硬链接编给引用计数器额外 +1  
+随后和每个文件的 i 节点信息作比较
+- i 节点链接计数过多  
+可以直接把 i 节点计数更新成正确的值
+- i 节点计数过少  
+其实同上
+
+### 文件系统性能
+
+#### 块高速缓存  
+和虚拟内存的实现非常相似  
+不过内存中的内容逻辑上是属于磁盘的
+- 把设备和磁盘地址 (比如块号?) 进行散列操作  
+在散列表中查找结果  
+如果有散列冲突, 就把冲突块加在散列值后面 (一个散列值对应了两个块, 用其他信息加以查找)
+
+通过给块分类, 就可以知道哪些块更可能最近频繁被使用而哪些可以暂时移出
+cache  
+![Alt text](image-52.png)
+
+将关键块在修改后尽可能快地写回磁盘  
+可以大大降低系统崩溃后造成的不一致的可能性 (更能够降低文件系统因此崩溃的可能性)
+
+
+修改完全存在于 cache 中而没有被写入磁盘, 则系统崩溃会导致寄
+![Alt text](image-53.png)
+
+>一些操作系统将高速缓存与页缓存集成。这种方式特别是在支持内存映射文件的时候很吸引人。如果一个文件被映射到内存上，则它其中的一些页就会在内存中，因为它们被要求按页进入。这些页面与在高速缓存中的文件块几乎没有不同。在这种情况下，它们能被以同样的方式来对待，也就是说，用一个缓存来同时存储文件块与页。
+
+#### 块提前读
+
+预判要进入高速缓存的块  
+预测需要顺序读取的文件  
+对于随机访问文件的效果就不明显了
+
+![Alt text](image-54.png)  
+![Alt text](image-55.png)
+
+### I\/O
+
+I\/O 设备分为 
+- 块设备  (硬盘 蓝光光盘 USB)
+- 字符设备 (不可寻址 如 键盘 鼠标)
+- 无法被分类的设备 (时钟 拥有内存映射的显示器(?))
+
+![Alt text](image-56.png)
+
+>控制器与设备之间的接口通常是一个很低层次的接口。例如，磁盘可以按每个磁道10 000个扇区每个扇区512字节进行格式化。然而，实际从驱动器出来的却是一个串行的位 (比特) 流，它以一个前导符 (preamble) 开始，接着是一个扇区中的4096位，最后是一个校验和，也称为错误校正码 (Error-Correcting Code，ECC)。前导符是在对磁盘进行格式化时写上去的，它包括柱面数和扇区号、扇区大小以及类似的数据，此外还包含同步信息
+>
+>控制器的任务是把串行的位流转换为字节块，并进行必要的错误校正工作。字节块通常首先任控制器内部的一个缓冲区中按位进行组装，然后在对校验和进行校验并证明字节块没有错误后，再将它复制到主存中
+
+控制器 : 把串行的流转换为字节块  
+LCD 显示器的控制器也算是一个位串行设备
+
+内存映射IO :  
+控制寄存器被映射到内存中
+
+![Alt text](image-57.png)
+
+内存映射IO
+- 可以使C 和 C\+\+ 能够直接寻址
+- 可以通过授权用户访问内存页面的方式  
+授权用户控制设备
+- 可以让用户用一条指令测试缓冲区是否有新的消息
+- 但为了保证 cache 和 IO 设备的同步性  
+可能需要禁用高速缓存
+- 除此之外  
+![Alt text](image-58.png)
+![Alt text](image-59.png)
+
