--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -695,7 +695,7 @@ cache
 ![Alt text](image-54.png)  
 ![Alt text](image-55.png)
 
-### I\/O
+# I\/O
 
 I\/O 设备分为 
 - 块设备  (硬盘 蓝光光盘 USB)
@@ -726,4 +726,88 @@ LCD 显示器的控制器也算是一个位串行设备
 - 除此之外  
 ![Alt text](image-58.png)
 ![Alt text](image-59.png)
+
+DMA 直接存储器存取
+
+>无论DMA控制器在物理上处于什么地方，它都能够独立于CPU而访问系统总线，如图5-4所示。它包含若干个可以被CPU读写的寄存器，其中包括一个内存地址寄存器、一个字节计数寄存器和一个或多个控制寄存器。控制寄存器指定要使用的I/O端口、传送方向 (从IO设备读或写到IO设备)、传送单位每次一个字节或每次一个字 以及在一次突发传送中要传送的字节数。
+
+![Alt text](image-60.png)
+
+![Alt text](image-61.png)
+
+相当于是cpu雇佣了一个小弟专门负责管理磁盘控制器的信息传输
+
+>许多总线能够以两种模式操作:每次一字模式和块模式。某些DMA控制器也能够以这两种模式操作。在前一个模式中，操作如上所述:DMA控制器请求传送一个字并且得到这个字。如果CPU也想使用总线，它必须等待。这一机制称为周期窃取 (cycle stealing)，因为设备控制器偶尔偷偷溜入并且从CPU偷走一个临时的总线周期，从而轻微地延迟CPU。在块模式中，DMA控制器通知设备获得总线发起一连串的传送，然后释放总线。这一操作形式称为突发模式 (burst mode)。它比周期窃取效率更高因为获得总线占用了时间，并且以一次总线获得的代价能够传送多个字。突发模式的缺点是，如果正在进行的是长时间突发传送，有可能将CPU和其他设备阻塞相当长的周期。
+
+磁盘先读数据到内部缓冲区  
+然后传输给控制器主存  
+原因在于
+- 可以在传输前检查校验和
+- ![Alt text](image-62.png)
+
+>并不是所有的计算机都使用DMA。反对的论据是主CPU通常要比DMA控制器快得多，做同样的工作可以更快 (当限制因素不是1\/O设备的速度时)。如果CPU没有其他工作要做，让(快速的)CPU等待(慢速的)DMA控制器完成工作是无意义的。此外，去除DMA控制器而让CPU用软件做所有的工作还可以节约金钱，这一点在低端(嵌入式) 计算机上十分重要。
+
+DMA(?)
+
+### 中断
+
+中断发生:  
+中断控制器在地址线上放置一个数字表明哪个数字需要关注并置起一个中断信号  
+中断信号使CPU停止当前的工作  
+地址线上的数字指向一个 **中断向量**  
+*此处陷阱和中断常常共享相同的中断向量*(?)  
+中断服务过程开始后, 立刻将一个确定的值写入中断控制器某个IO口来对中断做应答  
+这一应答使得中断控制器可以自由发送下一个中断  
+![Alt text](image-63.png)
+
+(?)
+
+中断和流水线  
+精确中断 和 不精确中断
+
+![Alt text](image-64.png)
+
+>(对于精确中断) 必须清楚适用的是哪种情况。通常，如果中断是一个IO中断，那么指令就会还没有开始执行。然而如果中断实际上是一个陷阱或者页面故障，那么PC一般指向导致错误的指令，所以它以后可以重新开始执行。
+
+不精确中断导致要向堆栈吐出一大堆实时状态  
+进而使超标量cpu反而不适合实时工作
+
+![Alt text](image-65.png)
+
+### IO 软件
+
+IO 软件要做到
+- 统一命名, 使操作更便捷更统一
+- 错误处理, 最好IO软件可以自行解决错误
+- IO 可能需要是异步的  
+对于性能要求极高的软件期待知道IO 的所有细节
+- 保证缓冲
+
+#### 程序控制IO
+
+在打印字符的时候  
+打印机有两个寄存器
+- 数据寄存器存放要打印的内容
+- 状态寄存器标明打印机是否允许内核继续输出下一个
+
+用户先将待打印的字符串块送入内核空间  
+内核空间采取各种方式将字符送入打印机数据寄存器  
+内核检查状态寄存器并决定是否发送下一位
+
+这种叫做忙等待 (或者是轮询!?)
+
+CPU除了忙等待还有其他事情要做  
+因此比较低效
+
+#### 中断驱动 IO
+
+打印机准备好打印下一个字符时就会向CPU发送一个中断
+
+因此  
+CPU要在打印的时候给用户来个阻塞  
+在没有其他的打印事物时, 解除用户的阻塞
+
+#### 使用DMA
+
+相当于DMA做了CPU在中断驱动IO中所做的工作
 
