--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -811,3 +811,103 @@ CPU要在打印的时候给用户来个阻塞
 
 相当于DMA做了CPU在中断驱动IO中所做的工作
 
+### IO 软件层次
+
+![Alt text](image-66.png)
+
+每一层有定义明确的功能和与相邻层之间的接口  
+
+#### 中断处理程序
+
+(?)
+
+![Alt text](image-67.png)
+![Alt text](image-68.png)
+
+#### 设备驱动程序
+
+操作系统定义了所有块设备 和 所有字符设备 都应当支持的一套接口标准
+
+驱动程序负责检验向他传递的参数是否合理  
+如检查磁盘是否有 FFFFFF 的地址等等  
+检查完毕后  
+![Alt text](image-69.png)
+
+在操作完成后驱动程序要负责检查错误  
+一切顺利后  
+驱动程序将数据传递给一个与设备无关的软件
+
+驱动程序必须是可重入的  
+意味着他必须在第一次调用结束之前有能力处理第二次调用
+
+对于所有可以热插拔的硬件的驱动  
+在传输过程中被操作系统通知用户将硬件移除时  
+不但要终止当前的传输  
+还要对其他的排队任务做处理  
+
+一个新设备的插入也会导致内核重新分配资源
+
+#### 与设备无关的IO软件
+
+![Alt text](image-70.png)
+
+- 设备驱动程序的统一接口  
+使操作系统面对的是统一的接口  
+避免写多份代码  
+操作系统只需要预先为每一种设备类型准备一套接口标准即可  
+每个设备都有 **主设备号和次设备号**  
+操作系统通过主设备号来寻找驱动程序  
+驱动程序通过次设备号来寻找真正要被操作的设备  
+- 提供缓冲  
+    - 方案一 : 在用户空间的缓冲区  
+    中断服务过程负责将到来的字符放入用户空间的缓冲区  
+    当缓冲区满  
+    唤醒用户进程 (而不是一个字符到来一次就唤醒用户进程一次)  
+    但如何缓冲区在用户进程被挂起期间被内存页面换出会如何?  
+    因此需要锁定内存页面
+    - 方案2 : 在内核中设置缓冲区  
+    当内核缓冲区满  
+    就将内容交给用户  
+    而为了避免缓冲区向用户空间交付数据时仍有新的数据到来  
+    可以使用双缓冲区轮流进行 缓冲 and 交付  
+    **或者是**  
+    循环缓冲区  
+    有空闲指针 和 满指针  
+    上报数据按照满指针的位置上报  
+    接受数据按照空闲指针的位置接受  
+    指针会循环 
+
+
+
+网络设备驱动器必须要能够均匀地发送数据包  
+因此它必须要把内核中的数据先复制到自己的缓冲区内
+
+- 错误报告  
+许多错误是和驱动程序有关的而应当由驱动程序自行处理  
+而许多也是设备无关的  
+如编程错误  和  实际的IO错误 (像是读取一块坏区)  
+- 分配释放专用设备  
+使某个进程独占设备  
+可以使进程必须要对某个任意特定文件执行open 操作来确保设备访问唯一性  
+或者是让请求和释放设备有特殊的机制  
+- 隐藏块大小
+
+#### 用户空间 IO 软件
+
+并非所有的用户层IO软件都由库过程构成  
+另一个重要类别是假脱机系统  
+
+假脱机系统 spooling  
+是多道程序设计中处理独占IO设备的一种方法 (?)  
+为了避免一堆用户竞争表示打印机打印序列的文件  
+使用守护进程
+
+守护进程 daemon  
+守护进程是允许使用打印机的唯一进程  
+用户将文件放入守护进程维护的 假脱机目录下  
+而后守护进程依次打印  
+
+![Alt text](image-71.png)
+
+### 盘
+
