--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -911,3 +911,48 @@ CPU要在打印的时候给用户来个阻塞
 
 ### 盘
 
+![Alt text](image-72.png)
+
+![Alt text](image-73.png)
+
+**稳定存储器**  
+当一个写命令到来  
+要么磁盘正确写入  
+要么什么都不做
+
+![
+](image-74.png)
+
+![Alt text](image-75.png)
+
+这个模型可以套用到 :   
+磁盘 + 非易失性RAM (nRAM) 上  
+每次崩溃都检查nRAM是否在执行稳定操作
+
+如果没有nRAM  
+![Alt text](image-76.png)
+
+### 时钟
+
+![Alt text](image-77.png)
+
+![Alt text](image-78.png)
+
+监视定时器 (?)
+
+剖析 (?)
+
+![Alt text](image-79.png)
+
+软定时器使  
+cpu在内核态做完了它要做的事情之后  
+检查软定时器注册的函数是否到期  
+如果到期  
+就直接做  
+避免二次陷入内核浪费时间  
+
+软定时器可以在网络负载较大的时候  
+优于轮询和中断的开销
+
+### 键鼠 
+
