--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -966,3 +966,133 @@ cpu在内核态做完了它要做的事情之后
 
 ### 死锁检测和死锁恢复
 
+检测死锁  
+通过有向图是否存在环路来检测  
+检测方法  
+
+![Alt text](image-81.png)
+![Alt text](image-82.png)
+
+用资源分配矩阵去检测死锁  
+不可能每次资源请求都检测死锁  
+常见的死锁检测时间点
+- 每几分钟检测一次
+- 当cpu空闲时检测
+
+#### 死锁恢复
+
+抢占资源  
+将使用死锁资源的进程挂起  
+然后系统将其分配给另一个  
+在另一个进程完成后  
+原来持有资源的进程继续运行
+
+检查点模式  
+周期性的写入检查点  
+检查点包括存储映像和资源分配状态  
+一旦有死锁  
+就将占用资源的进程恢复到一个初始阶段 来分配给死锁进程需要的资源  
+
+直接杀死进程  
+最好杀死一个幂等进程  
+
+
+#### 死锁避免
+
+![Alt text](image-83.png)
+![Alt text](image-84.png)
+
+安全状态  
+![Alt text](image-85.png)
+
+记录每个进程已经占用的资源和可能会请求的最大资源数量  
+如果任何一个进程能够加上目前的空闲资源而运行完毕的  
+就是安全状态
+
+而不安全状态并不意味着一定会有死锁  
+而是在运行了一段时间后  
+很可能会产生无法释放任何线程的局面
+
+**升级版**  
+单个资源的银行家算法  
+就是检测每次资源请求  
+如果会进入不安全状态就拒绝之
+
+多个资源的银行家算法也是类似
+
+#### 死锁预防
+
+破坏死锁成立条件
+- 破坏互斥  
+假脱机目录  
+如果在分配假脱机目录的时候也发生了冲突  
+就避免分配那些绝对不是必须的资源
+- 破坏占有并等待  
+如果一个进程直到所有的资源能够被满足后才能启动  
+则永无死锁  
+但  
+这种方法会让某个计算密集型进程长时间控制IO设备  
+- 通过如假脱机目录一样破坏不可抢占条件  
+数据库和操作系统内的表都不一定能进行这样的虚拟化  
+- 破坏环路等待  
+1 可能让所有的进程最多同时请求一个资源  
+但开销巨大不可接受  
+2 可以让进程按照一个固定的顺序请求资源  
+如打印机只能在绘图仪之后被请求  
+
+数据库的两阶段加锁  
+一个进程先给所有需要用的数据加锁  
+而后如果所有需要用的内容都被锁住了就加第二把锁并且修改  
+如果有任何其他进程请求第一阶段的锁  
+如果第一阶段没能获取所需要的全部的锁  
+就完全释放所有的自己申请的锁并重新获取一遍
+
+资源死锁 : 竞争死锁  
+通信死锁 : 协同同步异常  
+资源死锁(两边都在等待对方响应 or 发出命令)  
+
+try_lock原语  
+进程要么取得锁  
+要么返回失败  
+
+活锁:  
+两个双cpu并行的进程  
+在请求一个资源失败后礼貌地释放已经请求的资源并随机等待后再试一次   
+如果请求长期持续撞车  
+则无法运行  
+产生活锁
+
+饥饿  
+os总要决定哪个进程更优先获得资源  
+如果是小文件优先  
+那么大文件会被长期无法执行
+
+
+# 多媒体
+
+![Alt text](image-86.png)
+
+同时播放多个多媒体的cpu时间调度  
+- 速率单调调度  RMS  
+![Alt text](image-87.png)  
+最后一个条件并非必须, 但这能使建模更为容易  
+按照帧率给予优先级  
+帧率越高的优先级越高  
+在静态调度算法中 RMS 是最好的
+![Alt text](image-88.png)
+- 最早最终时限优先  EDF   
+![Alt text](image-89.png)
+
+![Alt text](image-90.png)
+
+
+![Alt text](image-91.png)
+
+![Alt text](image-92.png)
+
+![Alt text](image-93.png)
+
+
+
+# 虚拟化和云
+
