--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -1096,3 +1096,85 @@ os总要决定哪个进程更优先获得资源
 
 # 虚拟化和云
 
+敏感指令 : 在用户态和内核态执行同一条指令会有不同的效果  
+特权指令 : 在用户态执行的时候会导致陷入  
+机器可以虚拟化的一个必要条件是 : **敏感指令是特权指令的子集**
+
+Intel 368 的一些指令在用户态被执行的时候会被直接忽略  
+导致其和其后续产品都无法被虚拟化  
+也不能支持虚拟机管理程序
+
+如果程序能够读取并判断自己运行在用户态还是内核态  
+会造成虚拟机内的操作系统发现自己处在用户态  
+从而做出错误的决策  
+
+CPU 虚拟化支持 : VT (virtualization technology)
+
+以前的虚拟机管理系统 : 二进制翻译  
+将不安全的指令替换成安全的  
+
+**半虚拟化**  
+虚拟机向其内的os提供一些虚拟化调用执行特权操作如  
+修改页表  
+
+**全虚拟化**  
+就假装自己是物理机  
+
+如果虚拟机os执行了一条只能由内核态cpu处理的指令  
+在不支持VT的 cpu 上   
+这条指令执行失败并且可能导致系统崩溃  
+在支持VT的cpu上  
+这条指令陷入虚拟机管理程序  
+如果这条指令是由虚拟机中的用户执行的则模拟真实的硬件反应 (执行不成功)  
+如果这条是由操作系统执行的就返回正确的结果
+
+对于不支持VT的cpu  
+采用二进制翻译  
+x86支持4级权限  
+其中第一类虚拟机管理软件运行在第0级 (最高)  
+而可以使用户进程运行在3级  
+客户操作系统运行在第1级  
+
+基本块  
+以转移指令结尾的一小段顺序指令序列  
+除最后一条指令外  
+内部不含 **跳转 调用 陷入 返回 或者其他改变控制流的指令**  
+
+在执行一个基本块之前  
+二进制翻译先扫描基本块寻找敏感指令  
+存在就替换成虚拟机管理程序处理例程的指令  
+最后一条转移指令也会被替换成调用虚拟机管理程序的指令  
+以确保下一块也能够执行相似的过程
+
+动态翻译和模拟看起来代价巨大  
+但很多时候  
+基本块不包含敏感指令 或者是特权指令   
+并且翻译过了的块可以加以缓存  
+
+一个基本块执行完毕后  
+控制流返回虚拟机管理程序   
+来定位下一个基本块  
+
+因为陷入的开销很大  
+所以有些进程被翻译后反而效果更好  
+
+(?) 导致陷入的原因是什么?
+
+VT硬件的陷入并模拟的方法会导致大量的陷入  
+陷入会影响 : **CPU高速缓存 TLB 分支预测**  
+因此根据工作负载不同  
+软件方法有时会优于硬件方法  
+使用二进制翻译后  
+进程可能会变快也可能会变慢  
+例如关闭中断指令 在具有深度流水的cpu上执行需要花费10个时钟周期  
+而虚拟机只需要设置 **关闭中断位** 位传输只需要 3个周期以下的时间  
+但虚拟机需要操纵客户机的物理页映射到实际的物理页  
+这样才能操作页表  
+
+半虚拟化系统采用了 **虚拟化调用** 而不是二进制翻译   
+这样需要修改os  
+这样就可以移除os中的所有敏感指令  
+并让其用虚拟化调用来执行他想执行的IO  
+
+执行敏感指令 ≈ 虚拟化调用 (只不过是在不同的实现方式上)
+
