--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -1178,3 +1178,35 @@ VT硬件的陷入并模拟的方法会导致大量的陷入
 
 执行敏感指令 ≈ 虚拟化调用 (只不过是在不同的实现方式上)
 
+VMI  
+支持VMI的系统通过调用VMI提供的接口  
+而后和特殊的 VMI to others 库连接  
+类似于java解决环境问题
+
+虚拟管理系统需要给每个虚拟机都创建一个影子页表  
+影子页表负责映射虚拟os的物理地址和真实物理地址  
+但虚拟机只需要修改内存就可能是虚拟机内部真实页表的换入换出  
+而管理系统无法察觉到这一点而相应地修改真实的影子页表  
+
+为了消除影子页表的巨大开销  
+厂商生产支持 EPT 扩展页表的硬件  
+**是无需陷入的时候由硬件处理虚拟化造成的额外页操作**  
+
+利用去重技术  
+三个16gb的虚拟系统占用总共的内存不一定超过32gb  
+
+引入气球模块  
+p277   
+气球模块申请客户机锁定某些内存  
+多锁定 则客户机os会将不重要的页面换出  
+少锁定 则客户机os会将一些页面换入  
+
+IO MMU 消除了虚拟化内存的 DMA问题
+
+(IO MMU 和 普通 MMU 的区别? (?))
+
+
+![Alt text](image-94.png)
+
+![Alt text](image-95.png)
+
