--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -1212,5 +1212,61 @@ IO MMU 消除了虚拟化内存的 DMA问题
 
 # 多处理器
 
+![Alt text](image-100.png)
+
 ![Alt text](image-96.png)
+
+### UMA
+
+![Alt text](image-97.png)
+
+节点法多处理器  
+优点在于并行性  
+但是节点个数是平方增长的  
+
+多级交换  
+![Alt text](image-98.png)  
+交换基础元件  
+![Alt text](image-99.png)
+
+omega 网络是一种阻塞网络  
+当有请求发生冲突时  
+其中一个必须等待  
+
+### NUMA
+
+![Alt text](image-101.png)
+
+![Alt text](image-102.png)
+
+![Alt text](image-103.png)
+![Alt text](image-104.png)
+![Alt text](image-105.png)
+
+9 = 1 + 8  
+1 是 最前面的有效位  
+8 是 最后面的节点号  
+
+### 多核 芯片
+
+>虽然CPU可能共享高速缓存或者不共享(如图1-8所示)，但是它们都共享内存。考虑到每个内存字总是有惟一的值，这些内存是一致的。特殊的硬件电路可以确保在一个字同时出现在两个或者多个的高速缓存中的情况下，当其中某个CPU修改了该字，所有其他高速缓存中的该字都会被自动地并且原子性地删除来确保一致性。这个过程称为窥探 (snooping)
+
+多核芯片 : 片级多处理机 (CMP)
+
+### 多处理机操作系统 
+
+每个cpu都有自己的操作系统  
+![Alt text](image-106.png)
+
+![Alt text](image-107.png)
+
+主从多处理机
+
+![Alt text](image-108.png)
+
+对称多处理机 SMP
+
+>我们的第三种模型，即对称多处理机(Symmetric MultiProcessor，SMP)，消除了上述的不对称性在存储器中有操作系统的一个副本，但任何CPU都可以运行它。在有系统调用时，进行系统调用的CPU陷入内核并处理系统调用。图8-9是对SMP模式的说明。   
+>这个模型动态地平衡进程和存储器，因为它只有一套操作系统数据表。它还消除了主CPU的瓶颈因为不存在主CPU，但是这个模型也带来了自身的问题。特别是，当两个或更多的CPU同时运行操作系统代码时，就会出现灾难。想象有两个CPU同时选择相同的进程运行或请求同一个空闲存储器页面。处理这些问题的最简单方法是在操作系统中使用互斥信号量(锁)，使整个系统成为一个大临界区。当一个CPU要运行操作系统时，它必须首先获得互斥信号量。如果互斥信号量被锁住，就得等待。按照这种方式，任何CPU都可以运行操作系统，但在任一时刻只有一个CPU可运行操作系统。   
+>![Alt text](image-109.png)
 
